# clean_excel

./: README.md  pyproject.toml  to_clean.xlsx
clean_excel/: clean.py
