[tool.poetry]
name = "clean-excel"
version = "0.1.0"
description = ""
authors = ["Henry La <layifang@gmail.com>"]
readme = "README.md"
packages = [{include = "clean_excel"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.3"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
